# ChessAi

./: .gitignore  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  EnigmaEngine  Piece.h  PrecomputedData.h  README.md  main.cpp  test.cpp
.github/workflows/: build-pr.yml  build.yml
